commenting out buttons

--- a/src/pages/dyn/four_bar_linkages.astro
+++ b/src/pages/dyn/four_bar_linkages.astro
@@ -70,7 +70,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
               <canvas id="aml-ft-c" width="600" height="300">
               </canvas>
             </td>
-            <td class="controls">
+            <!--<td class="controls">
               <button class="anim-toggle:aml-ft-c">animation</button>
               <button class="reset:aml-ft-c">reset</button>
               <table class="alignTop">
@@ -86,7 +86,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
                 <tr><td>Input \(\alpha\):</td><td><span class="data-option:aml-ft-c:inputType"></span></td></tr>
                 <tr><td>Output \(\beta\):</td><td><span class="data-option:aml-ft-c:outputType"></span></td></tr>
               </table>
-            </td>
+            </td>-->
           </tr>
         </table>
         <p>
@@ -134,7 +134,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
               <canvas id="aml-fr-c" width="600" height="300">
               </canvas>
             </td>
-            <td class="controls">
+            <!--<td class="controls">
               <button class="anim-toggle:aml-fr-c">animation</button>
               <button class="reset:aml-fr-c">reset</button>
               <table class="alignTop">
@@ -151,9 +151,9 @@ import DisplayTable from "../../components/DisplayTable.astro"
                 <tr><td>Output \(\beta\):</td><td><span class="data-option:aml-fr-c:outputType"></span></td></tr>
               </table>
             </td>
-          </tr>
+          </tr>-->
         </table>
-        <table class="options">
+        <!--<table class="options">
           <col class="label" />
           <col class="input" />
           <col class="value" />
@@ -167,7 +167,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
             <td><input type="range" min="5" max="40" value="0" step="1" class="data-input:aml-fr-c:b" /></td>
             <td>\(b = \) <span class="data-option:aml-fr-c:b"></span> cm</td>
           </tr>
-        </table>
+        </table>-->
 </SubSection>
 
 <SubSection title = "Coupler dynamics" id = "coupler_dynamics">
@@ -191,7 +191,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
               <canvas id="aml-fc-c" width="600" height="300">
               </canvas>
             </td>
-            <td class="controls">
+            <!--<td class="controls">
               <button class="anim-toggle:aml-fc-c">animation</button>
               <button class="reset:aml-fc-c">reset</button>
               <table class="alignTop">
@@ -221,10 +221,10 @@ import DisplayTable from "../../components/DisplayTable.astro"
                 <tr><td>Input \(\alpha\):</td><td><span class="data-option:aml-fc-c:inputType"></span></td></tr>
                 <tr><td>Output \(\beta\):</td><td><span class="data-option:aml-fc-c:outputType"></span></td></tr>
               </table>
-            </td>
+            </td>-->
           </tr>
         </table>
-        <table class="options">
+        <!--<table class="options">
           <col class="label" />
           <col class="input" />
           <col class="value" />
@@ -242,7 +242,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
             of DC length
             </td>
           </tr>
-        </table>
+        </table>-->
 </SubSection>
 
 <SubSection title = "Limiting the input angle" id = "limiting_the_input_angle">
@@ -261,7 +261,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
               <canvas id="aml-fi-c" width="600" height="300">
               </canvas>
             </td>
-            <td class="controls">
+            <!--<td class="controls">
               <button class="anim-toggle:aml-fi-c">animation</button>
               <button class="reset:aml-fi-c">reset</button>
               <table class="alignTop">
@@ -279,9 +279,9 @@ import DisplayTable from "../../components/DisplayTable.astro"
                 <tr><td>Output \(\beta\):</td><td><span class="data-option:aml-fi-c:outputType"></span></td></tr>
               </table>
             </td>
-          </tr>
+          </tr>-->
         </table>
-        <table class="options">
+        <!--<table class="options">
           <col class="label" />
           <col class="input" />
           <col class="value" />
@@ -295,7 +295,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
             <td><input type="range" min="0" max="100" value="0" step="5" class="data-input:aml-fi-c:oscMagnitude" /></td>
             <td><InlineEquation equation = "\\Delta \\alpha ="/> <span class="data-option:aml-fi-c:oscMagnitude"></span>% of 180°</td>
           </tr>
-        </table>
+        </table>-->
 </SubSection>
 
 <SubSection title = "Example: pumpjack (rotary to reciprocal)" id = "example_pumpjack_rotary_to_reciprocal">
@@ -318,7 +318,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         <div class="figureContainer width600" id="aml-fp">
           <canvas id="aml-fp-c" width="600" height="431" class="figureImage" >
           </canvas>
-          <p class="controls">
+          <!--<p class="controls">
             <button class="option-toggle:aml-fp-c:showLinkage">show linkage</button>
             <button class="anim-toggle:aml-fp-c">animation</button>
             <button class="reset-time:aml-fp-c">reset</button>
@@ -333,7 +333,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
             href="http://creativecommons.org/licenses/by-sa/2.0/deed.en">CC
             BY-SA 2.0</a>) (<a href="/dyn/four_bar_linkages/aml_7632673158.jpg">full-sized
             image</a>).
-          </p>
+          </p>-->
         </div>
 </SubSecton>
 
@@ -353,7 +353,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         <div class="figureContainer width600" id="aml-fb">
           <canvas id="aml-fb-c" width="600" height="400" class="figureImage" >
           </canvas>
-          <p class="controls">
+          <!--<p class="controls">
             <button class="option-toggle:aml-fb-c:showLinkage">show linkage</button>
             <button class="anim-toggle:aml-fb-c">animation</button>
             <button class="reset-time:aml-fb-c">reset</button>
@@ -369,7 +369,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
             href="http://creativecommons.org/licenses/by-sa/2.0/deed.en">CC
             BY 2.0</a>) (<a href="/dyn/four_bar_linkages/aml_7705967112.jpg">full-sized
             image</a>).
-          </p>
+          </p>-->
         </div>
         <p>
           While the four links in the bicycle linkage are
@@ -620,10 +620,10 @@ import DisplayTable from "../../components/DisplayTable.astro"
           <div class="imageBox width250">
             <canvas id="aml-fg-c" width="250" height="250">
             </canvas>
-            <p class="controls">
+            <!--<p class="controls">
               <button class="anim-toggle:aml-fg-c">animation</button>
               <button class="reset:aml-fg-c">reset</button>
-            </p>
+            </p>-->
           </div>
           <p>
             Rather than trying to discover special linkages to produce
@@ -685,12 +685,12 @@ import DisplayTable from "../../components/DisplayTable.astro"
         <div class="figureContainer width600" id="aml-fj">
           <canvas id="aml-fj-c" width="600" height="550" class="figureImage" >
           </canvas>
-          <p class="controls">
+          <!--<p class="controls">
             <button class="option-toggle:aml-fj-c:showLinkage">show linkage</button>
             <button class="anim-toggle:aml-fj-c">animation</button>
             <button class="option-toggle:aml-fj-c:showForces">show forces</button>
             <button class="reset-time:aml-fj-c">reset</button>
-          </p>
+          </p>-->
           <p class="figureCaption">
             The skull of a Bleeker's Parrotfish, showing the main
             components of the jaw. Image credit: <a
@@ -742,9 +742,9 @@ import DisplayTable from "../../components/DisplayTable.astro"
           <div class="imageBox width250">
             <canvas id="aml-fm-c" width="250" height="312">
             </canvas>
-            <p class="controls">
+            <!--<p class="controls">
               <button class="option-toggle:aml-fm-c:showJaws">show pharyngeal jaws</button>
-            </p>
+            </p>-->
             <p class="caption">
               Image credit: R. S. Mehta and P. C. Wainwright,
               Raptorial jaws in the throat help moray eels swallow
@@ -788,7 +788,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
               <canvas id="aml-fl-c" width="600" height="300">
               </canvas>
             </td>
-            <td class="controls">
+            <!--<td class="controls">
               <button class="anim-toggle:aml-fl-c">animation</button>
               <button class="reset:aml-fl-c">reset</button>
               <table class="alignTop">
@@ -941,7 +941,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
             <td>\(V = l - s - p - q = \) <span class="data-option:aml-fl-c:ValidityIndex"></span> cm
             <span class="data-option:aml-fl-c:ValidityRelation"></span></td>
           </tr>
-        </table>
+        </table>-->
         <p>
           The variables \(s\) and \(l\) are the shortest and longest
           side lengths, respectively, while \(p\) and \(q\) are the
