commenting out buttons pt 2

--- a/src/pages/dyn/four_bar_linkages.astro
+++ b/src/pages/dyn/four_bar_linkages.astro
@@ -150,8 +150,8 @@ import DisplayTable from "../../components/DisplayTable.astro"
                 <tr><td>Input \(\alpha\):</td><td><span class="data-option:aml-fr-c:inputType"></span></td></tr>
                 <tr><td>Output \(\beta\):</td><td><span class="data-option:aml-fr-c:outputType"></span></td></tr>
               </table>
-            </td>
-          </tr>-->
+            </td>-->
+          </tr>
         </table>
         <!--<table class="options">
           <col class="label" />
@@ -278,8 +278,8 @@ import DisplayTable from "../../components/DisplayTable.astro"
                 <tr><td>Input \(\alpha\):</td><td><span class="data-option:aml-fi-c:inputType"></span></td></tr>
                 <tr><td>Output \(\beta\):</td><td><span class="data-option:aml-fi-c:outputType"></span></td></tr>
               </table>
-            </td>
-          </tr>-->
+            </td>-->
+          </tr>
         </table>
         <!--<table class="options">
           <col class="label" />
@@ -821,10 +821,10 @@ import DisplayTable from "../../components/DisplayTable.astro"
                 <tr><td>Shortest link:</td><td><span class="data-option:aml-fl-c:GrashofInfo"></span></td></tr>
                 <tr><td></td><td>(<span class="data-option:aml-fl-c:GrashofType"></span>)</td></tr>
               </table>
-            </td>
+            </td>-->
           </tr>
         </table>
-        <table class="options">
+        <!--<table class="options">
           <col class="label" />
           <col class="input" />
           <col class="value" />
