--- a/src/pages/sol/strain.astro
+++ b/src/pages/sol/strain.astro
@@ -154,10 +154,12 @@ Dimensionless [mm/mm, in/in, or %]
 
 <!-- <DisplayEquation equation=" E&nbsp;= \\begin{bmatrix} \\varepsilon_{xx} &amp; \\gamma_{xy} &amp; \\gamma_{xz} \\\\ \\gamma_{yx} &amp; \\varepsilon_{yy} &amp; \\gamma_{yz} \\\\ \\gamma_{zx} &amp;\\gamma_{zy} &amp; \\varepsilon_{zz} \\end{bmatrix} \\" /> -->
 
+The tensor contains:
 
 <Itemize>
     <Item>  Three normal strain components: <InlineEquation equation="\\varepsilon_{xx}, \\varepsilon_{yy}, \\varepsilon_{zz}" /></Item>
     <Item> Six shear strain components: <InlineEquation equation="\\gamma_{xy} =\\gamma_{yx}, \\gamma_{xz}=\\gamma_{zx}, \\gamma_{yz}=\\gamma_{zy}" /></Item>
+    <Item> Note that the tensor shear strain (<InlineEquation equation = "\\varepsilon_{ij}" />) is defined as half of the engineering shear strain (<InlineEquation equation = "\\gamma_{ij}" />). </Item>
 </Itemize>
 
 <p>
