--- a/src/pages/sol/pressure_vessels.astro
+++ b/src/pages/sol/pressure_vessels.astro
@@ -45,7 +45,7 @@ import BlueText from "../../components/BlueText.astro"
 
  Cylindrical pressure vessels are an axisymmetric problem, there is no shear stress on an element parallel to the axis of the cylinder. Therefore, the only normal stresses are in the directions of axis and circumference.
 
-<Image src="/sol/pressure_vessels/CylindricalVessel.png" width="7"></Image>
+<Image src="/sol/pressure_vessels/CylindricalVessel_fixed.jpg" width="7"></Image>
 
 <DisplayEquation equation="\\sigma_1 = \\sigma_h = \\frac{pr}{t}\\" title="Hoop (circumfrential) stress." background="True" derivation="True" id="hp-str">
 
