--- a/src/pages/sol/stress_transformation.astro
+++ b/src/pages/sol/stress_transformation.astro
@@ -148,7 +148,7 @@ The general state of stress at a point is characterized by three independent nor
 
 <SubSection title="Plane Stress Transformation" id="plane-stress-transformation">
 
-  <Image src="/sol/stress_transformation/Coord Transformation.png" width="6"></Image>
+  <Image src="/sol/stress_transformation/Coord Transformation_fixed.jpg" width="6"></Image>
 
 <p>
  We think of stresses acting on faces, so we often associate the state of stress with a coordinate system. However, the selection of a coordinate system is arbitrary (materials don't know about coordinates - it's a mathematical construct!) and we could choose to express the stress state acting on any set of faces aligned with <strong>any</strong> coordinate system axes. Furthermore, we can relate the states of stress in each coordinate system to one another through <strong>stress transformation equations.</strong>
