--- a/src/pages/sta.astro
+++ b/src/pages/sta.astro
@@ -50,6 +50,12 @@ import "../../public/static/css/course_home_pages.css"
       <li><a href="/sta/virtual_work?origin=coursemenu">Virtual work</a></li>
     </ol>
   </section>
+  <h2 class = "site-title">Applications</h2>
+  <section class="mt-sm-4 mt-2">
+    <ol>
+      <li><a href="/sta/track_and_field_starting_blocks">Track and field starting blocks</a></li>
+    </ol>    
+  </section>
   <div style="height:40px"></div>
 
   <h2 class="site-title">Faculty Authors:</h2>
