--- a/src/pages/dyn/four_bar_linkages.astro
+++ b/src/pages/dyn/four_bar_linkages.astro
@@ -93,10 +93,10 @@ import DisplayTable from "../../components/DisplayTable.astro"
           Four-bar linkages can be used for many mechanical purposes, including to:
         </p>
         <ol>
-          <li>convert rotational motion to reciprocating motion (e.g., <a href="#aml-sp">pumpjack</a> examples below)</li>
-          <li>convert reciprocating motion to rotational motion (e.g., <a href="#aml-sb">bicycle</a> examples below)</li>
-          <li>constrain motion (e.g., <a href="#aml-sk">knee joint</a> and <a href="#aml-sw">suspension</a> examples below)</li>
-          <li>magnify force (e.g., <a href="#aml-sj">parrotfish jaw</a> examples below)</li>
+          <li>convert rotational motion to reciprocating motion (e.g., <a href="#example_pumpjack_rotary_to_reciprocal">pumpjack</a> examples below)</li>
+          <li>convert reciprocating motion to rotational motion (e.g., <a href="#example_bicycle_pedaling_reciprocal_to_rotary">bicycle</a> examples below)</li>
+          <li>constrain motion (e.g., <a href="#knee_joint">knee joint</a> and <a href="#suspensions_linkage">suspension</a> examples below)</li>
+          <li>magnify force (e.g., <a href="#example_parrotfish_jaw_force_multiplication">parrotfish jaw</a> examples below)</li>
         </ol>
   <CalloutContainer slot = "cards">
     <CalloutCard title = "Reference material">
@@ -402,7 +402,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
             Germany in 1818, used direct human propulsion along the
             ground, as shown below.  Mannheim was an important
             location for vehicle invention, as it was also the city
-            where <a href="avb.html#avb-is">Karl Benz invented the
+            where <a href="/dyn/banked_turns#track_geometry">Karl Benz invented the
             modern automobile in 1885</a>.
           </p>
           <div class="imageBox width250">
