Updated image and added raw file

--- a/src/pages/sol/axial_loading.astro
+++ b/src/pages/sol/axial_loading.astro
@@ -55,7 +55,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 <SubSection title="Saint-Venant's Principle: slender beam case" id="saint-venants_principle_slender_beam_case">
 
-    <Image src='/sol/axial_loading/Saint-Venants_fixed.jpg' width='7'>Notation</Image>
+    <Image src='/sol/axial_loading/Saint-Venants (FIXED).jpg' width='7'>Notation</Image>
 
 <p>Stress analysis very near to the point of application of load <InlineEquation equation='P' />. <strong>Saint-Venant's principle:</strong> the stress and strain produced at points in a body <em>sufficiently removed</em>* from the region of external load application will be the same as the stress and strain produced by any other applied external loading that has the same statically equivalent resultant and is applied to the body within the same region.</p> 
 
